--- a/app/partials/dental/dental_meal_d.html
+++ b/app/partials/dental/dental_meal_d.html
@@ -34,11 +34,11 @@
             <div class="main-list-profile_word">宝宝们要从小坚持刷牙<br/>定期进行口腔检查</div>
             <div class="main-list-profile_problem">
                 <div class="main-list-profile_problem_paddBottom">预防虫牙三大秘诀</div>
-                <img src="/img/child_dental/meal_a/pic_3.png">
+                <img src="/img/child_dental/meal_d/pic_3.png">
             </div>
              <div class="main-list_intro" style="margin-bottom: 10px;">
-                <img src="/img/child_dental/meal_a/pic_1.png?v=1">
-                <img src="/img/child_dental/1-1.png?v=1">
+                <img src="/img/child_dental/meal_d/pic_1.png?v=1">
+                <img src="/img/child_dental/meal_d/pic_2.png?v=1">
             </div>  
             <img src="/img/child_dental/yuyue.png">
             <img class="border_bottom" src="/img/child_dental/yuyue_word.png">
@@ -46,8 +46,8 @@
        
     	<!-- 套餐 -->
     	<div class="main-list_intro"  id="taocan" style="display: none;">
-            <img src="/img/child_dental/meal_a/meal_1.png?v=1">
-            <img src="/img/child_dental/meal_a/meal_2.png?v=1">
+            <img src="/img/child_dental/meal_d/meal_1.png?v=1">
+            <img src="/img/child_dental/meal_d/meal_2.png?v=1">
         </div>
         <div class="kong"></div>
         
@@ -55,16 +55,8 @@
     	<!-- 合作医院 -->
         <div class="main-list_hospital" id="yiyuan" style="display: none;">
             <div class="main-list_hospital_box">
-                <div class="main-list_hospital_box_tit"><span class="num_blue">3</span>家知名口腔医院 <span class="num_blue">24</span>家诊所</div>
+                <div class="main-list_hospital_box_tit">知名口腔医院</div>
                 <!-- 医院logo and detail -->
-                <div class="main-list_hospital_list">
-                    <img src="/img/child_dental/hospital/hos_logo_1.png">
-                    <div>
-                        <div class="hospital_name">瑞泰口腔</div>
-                        <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
-                    </div>
-                </div>
-                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div ng-click="showToast(1)">点击查看</div></div>
                  <div class="main-list_hospital_list">
                     <img src="/img/child_dental/hospital/hos_logo_2.png">
                     <div>
@@ -72,15 +64,6 @@
                         <div class="hospital_name_detail">成立于1993年， 联想控股成员企业，中国口腔医疗服务市场消费者满意首选品牌、中国口腔医疗连锁行业十大具有影响力品牌。</div>
                     </div>
                 </div>
-                <div class="shop_detail"><div class="shop">北京14家门店 &nbsp;&nbsp;广州1家门店</div><div ng-click="showToast(2)">点击查看</div></div>
-                 <div class="main-list_hospital_list">
-                    <img src="/img/child_dental/hospital/hos_logo_3.png">
-                    <div>
-                        <div class="hospital_name">普尔口腔</div>
-                        <div class="hospital_name_detail">成立于2002年的高档齿科医院。温馨舒适的诊疗环境，具有资深水准的医疗团队，严格的消毒隔离流程，完善的管理体系。</div>
-                    </div>
-                </div>
-                <div class="shop_detail"><div class="shop">北京1家门店 &nbsp;&nbsp;上海1家门店</div><div ng-click="showToast(3)">点击查看</div></div>
             </div>
             <div class="main-list_hospital_doctor">
                 <div class="main-list_hospital_doctor_tit">权威的儿童口腔医生</div>
