--- a/app/wx_share/partials/dental.html
+++ b/app/wx_share/partials/dental.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <img src="/wx_share/img/dental/section-01.jpg" class="mt20" />
+        <img src="/wx_share/img/dental/section-1.png" class="mt20" />
         <div class="pyq-box mt20">
             <div class="pyq-title"> 
                 <h2>爆款！</h2>
