--- a/app/partials/dental/dental_meal_c.html
+++ b/app/partials/dental/dental_meal_c.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/child_dental.css?rev=1d3ceac19865cffabb01a2f3609a4679">
+<link rel="stylesheet" href="/css/dental_meal.css?rev=sghg">
 
 <div class="child-dental-container">
     <!--  第一页-->
@@ -55,7 +56,7 @@
     	<!-- 合作医院 -->
         <div class="main-list_hospital" id="yiyuan" style="display: none;">
             <div class="main-list_hospital_box">
-                <div class="main-list_hospital_box_tit"><span class="num_blue">3</span>家知名口腔医院 <span class="num_blue">24</span>家诊所</div>
+                <div class="main-list_hospital_box_tit">知名口腔医院</div>
                 <!-- 医院logo and detail -->
                 <div class="main-list_hospital_list">
                     <img src="/img/child_dental/hospital/hos_logo_1.png">
@@ -64,15 +65,6 @@
                         <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
                     </div>
                 </div>
-                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div ng-click="showToast(1)">点击查看</div></div>
-                 <div class="main-list_hospital_list">
-                    <img src="/img/child_dental/hospital/hos_logo_2.png">
-                    <div>
-                        <div class="hospital_name">拜博口腔</div>
-                        <div class="hospital_name_detail">成立于1993年， 联想控股成员企业，中国口腔医疗服务市场消费者满意首选品牌、中国口腔医疗连锁行业十大具有影响力品牌。</div>
-                    </div>
-                </div>
-                <div class="shop_detail"><div class="shop">北京14家门店 &nbsp;&nbsp;广州1家门店</div><div ng-click="showToast(2)">点击查看</div></div>
                  <div class="main-list_hospital_list">
                     <img src="/img/child_dental/hospital/hos_logo_3.png">
                     <div>
@@ -80,7 +72,6 @@
                         <div class="hospital_name_detail">成立于2002年的高档齿科医院。温馨舒适的诊疗环境，具有资深水准的医疗团队，严格的消毒隔离流程，完善的管理体系。</div>
                     </div>
                 </div>
-                <div class="shop_detail"><div class="shop">北京1家门店 &nbsp;&nbsp;上海1家门店</div><div ng-click="showToast(3)">点击查看</div></div>
             </div>
             <div class="main-list_hospital_doctor">
                 <div class="main-list_hospital_doctor_tit">权威的儿童口腔医生</div>
