--- a/app/sass/child_dental.scss
+++ b/app/sass/child_dental.scss
@@ -150,7 +150,7 @@
 			.main-list_hospital_list {
 				padding-top: 15px;
 				img {
-					width: 85px;
+					// width: 85px;
 					height: 85px;
 					margin-right: 10px;
 				}
