simple auto commit

--- a/app/css/child_dental.css
+++ b/app/css/child_dental.css
@@ -292,7 +292,7 @@
         display: -ms-flexbox;
         display: flex; }
         .child-dental-container .main-list .main-list_hospital_box .main-list_hospital_list img {
-          height: 85px;
+          width: 85px;
           margin-right: 10px; }
         .child-dental-container .main-list .main-list_hospital_box .main-list_hospital_list .hospital_name {
           font-size: 13px;
