--- a/app/sass/child_dental.scss
+++ b/app/sass/child_dental.scss
@@ -151,7 +151,7 @@
 				padding-top: 15px;
 				img {
 					width: 85px;
-					// height: 85px;
+					height: 85px;
 					margin-right: 10px;
 				}
 				.hospital_name {
