--- a/app/css/child_dental.css
+++ b/app/css/child_dental.css
@@ -301,6 +301,13 @@
           margin-bottom: 10px; }
         .child-dental-container .main-list .main-list_hospital_box .main-list_hospital_list .hospital_name_detail {
           font-size: 12px; }
+      .child-dental-container .main-list .main-list_hospital_box .main-list_hospital_list > div {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        -moz-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+         }
       .child-dental-container .main-list .main-list_hospital_box .shop_detail {
         height: 37px;
         line-height: 37px;
