simple auto commit

--- a/app/partials/newSelect.html
+++ b/app/partials/newSelect.html
@@ -1,4 +1,4 @@
-
+ <script src="/js/select.js?rev=ac810039ad888c00bc9b4e5de05db0a7"></script>
 <div  class="select-contrl"  data-ng-init="init()" style="overflow: hidden;"  cg-busy="selectPromise" >
 	<!--
 	<div  class="head-container" style="overflow: hidden;" >
