--- a/app/template/loading.html
+++ b/app/template/loading.html
@@ -1,6 +1,6 @@
 
 
-	<div style="margin:0 auto;text-align: center;">
+	<div style="margin:0 auto;text-align: center;z-index:100000">
 			<img src="/img/loading.gif" style="width:50px;" />
 			<div class="cg-busy-default-text" style="margin:0;text-align: center;color:#000">{{$message}}</div>
 	</div>
