simple auto commit

--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -5,7 +5,7 @@
 	<div class="relation" id="relation">
 		<div class="column">
 			<div class="column_btn blue linshi" data-relation="1" ng-click="clickBtn(1)">自 己</div>
-			<div class="column_btn no_up" style="background:#ccc" data-relation="2" ng-click="clickBtn(3)">父 母</div>
+			<div class="column_btn linshi"  data-relation="2" ng-click="clickBtn(3)">父 母</div>
 		</div>
 
 		<div class="column">
