--- a/app/sass/wx_share/bd_part.scss
+++ b/app/sass/wx_share/bd_part.scss
@@ -240,3 +240,34 @@ body {
 .finish:active {
   background: #266ada;
 }
+
+  .ul_contrl{
+    background-color: #4285f4;
+  }
+  .description{
+    font-size:12px;
+    color:#999;
+  }
+  .baofei{
+    padding-top:.1rem;
+    text-align: left;
+  }
+  .cell-dental{
+    // overflow: hidden;
+    margin-top:.15rem;
+    border:1px solid #e2e2e2;
+    @include flexbox();
+  }
+  .cell-dental_lable{
+    width:70px;
+    height:.44rem;
+    line-height: .44rem;
+    padding-left: 14px;
+    color:#ccc;
+    background-color: #FFF;
+  }
+  .cell-dental_select{
+
+    @include flex(1);
+  }
+ 
