--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -135,7 +135,7 @@
             <div class="taocan">
                 <div class="title">请选择购买的套餐</div>
                 <div class="ybwx-btn ybwx-btn--primary"   ng-click="choose($event,577)">A:瑞泰/普尔-乳牙保健套餐 318元/年</div>         
-                <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">B:拜博-儿童虫牙预防套餐 498元/年</div>         
+                <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,578)">B:拜博-儿童虫牙保障套餐 498元/年</div>         
                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,579)">C:瑞泰/普尔-虫牙治疗套餐 1138元/年</div>         
                 <div class="ybwx-btn ybwx-btn--white" style="margin-top:10px;" ng-click="choose($event,580)">D:拜博-咬合畸形检查套餐 418元/年</div>   
         
