--- a/app/partials/dental/dental_meal_a.html
+++ b/app/partials/dental/dental_meal_a.html
@@ -101,8 +101,13 @@
             <img src="/img/child_dental/huanjing/huanjing_1.png">
             <img src="/img/child_dental/huanjing/huanjing_2.png">
             <div class="kong"></div>
+
+            <!-- 医院地址 -->
             <div class="hospital-address">
-                <div><i style="color: #4285f4;">&#xe633;</i></div>
+                <div class="hospital-address-tit"><i class="iconfont" style="color: #4285f4;margin-right: 7px;font-size: 15px;">&#xe633;</i>北京瑞泰口腔医院地址</div>
+                <div>
+                    <div></div>
+                </div>
             </div>
         </div>
 	</div>
