--- a/app/sass/child_dental.scss
+++ b/app/sass/child_dental.scss
@@ -339,8 +339,16 @@
 		}
 	}
 }
+
 // 医院地址
 .hospital-address {
 	background: #fff;
 	padding: 20px;
+	.hospital-address-tit {
+		font-size: 15px;
+		color: #444;
+		line-height: 15px;
+		margin-bottom: 30px;
+	}
+
 }
