--- a/app/partials/dental/dental_meal_b.html
+++ b/app/partials/dental/dental_meal_b.html
@@ -4,8 +4,8 @@
     <!--  第一页-->
 	<img src="/img/child_dental/index_banner.png">
 	<div class="child-dental-container_introl">
-		<div class="child-dental-container_introl--company">诺贝泰康少儿齿科保障计划</div>
-		<div class="orange child-dental-container_introl--price">318元/年起</div>
+		<div class="child-dental-container_introl--company">拜博-儿童虫牙保障套餐</div>
+		<div class="orange child-dental-container_introl--price">498元/年</div>
 	</div>
     <div class="child-dental-container_word">让宝宝享受专业的口腔检查、虫牙预防、龋齿治疗、咬合畸形检查，无需体检，无等待期，当日购买即可预约就诊。</div>
     <div class="kong"></div>
@@ -92,6 +92,48 @@
             <!-- 合作医院环境 -->
             <img src="/img/child_dental/huanjing/huanjing_1.png">
             <img src="/img/child_dental/huanjing/huanjing_2.png">
+            <div class="kong"></div>
+            <div class="hospital-address-controller">
+                <div class="hospital-address-tit"><i class="iconfont" style="color: #4285f4;margin-right: 7px;font-size: 15px;">&#xe633;</i>北京拜博口腔医院地址：</div>
+                <div class="meal-ac-hospital_on">
+                    <div>1、北京京拜博拜尔口腔医院（总部）</div>
+                    <div>北京市东城区祈年大街兴隆国际18号院4号楼</div>
+                    <div>2、北京拜博拜尔口腔医院樱花门诊部</div>
+                    <div>北京市朝阳区樱花园东街1号</div>
+                    <div>3、北京拜博拜尔口腔医院劲松门诊部</div>
+                    <div>朝阳区劲松农光里21号楼南三号楼</div>
+                    <div>4、北京拜博拜尔口腔医院知春路门诊部</div>
+                    <div>北京市海淀区白塔庵汉荣家园一号楼一层</div>
+                    <div>5、北京拜博拜尔口腔医院东城门诊部</div>
+                    <div class="hospital-address">北京市东城区海运仓一号瀚海海运仓大厦一层159号</div>
+                    <div>6、北京拜博拜尔口腔医院青年路门诊部</div>
+                    <div class="hospital-address">朝阳区朝阳北路青年汇112号楼底商1-126/127室</div>
+                    <div>7、北京拜博拜尔口腔医院阜通门诊</div>
+                    <div class="hospital-address">北京朝阳区阜通东大街望京园605号楼1层。</div>
+                    <div>8、北京拜博拜尔口腔医院望京西门诊部</div>
+                    <div class="hospital-address">北京市朝阳区湖光中街南湖西园216号楼底商2层</div>
+                    <div>9、北京拜博拜尔口腔医院金融街门诊部</div>
+                    <div class="hospital-address">北京市西城区金融街广成街4号金宸国际公寓2号楼2单元303室</div>
+                    <div>10、北京拜博拜尔口腔医院姚家园门诊部</div>
+                    <div class="hospital-address">北京市朝阳区东三环北路30号紫荆豪庭A座底商</div>
+                    <div>11、北京拜博拜尔口腔医院金台路门诊部</div>
+                    <div class="hospital-address">北京市朝阳区金台里10号3层综合楼</div>
+                    <div>12、大都会门诊（试营业）</div>
+                    <div class="hospital-address">北京市朝阳区东三环中路甲10号2层201室</div>
+                    <div>13、北京拜博拜尔口腔医院观巢门诊部</div>
+                    <div class="hospital-address">北京市朝阳区慧忠里122号1层104、2层202、三层301局部 （待开业）</div>
+                    <div>14、北京拜博拜尔口腔医院融科门诊部</div>
+                    <div class="hospital-address">北京市海淀区中关村科学院南路2号融科资讯中心B座二层 （待开业）</div>
+
+                </div>
+                <div class="meal-ac-hospital_tw">
+                    <div class="hospital-address-tit"><i class="iconfont" style="color: #4285f4;margin-right: 7px;font-size: 15px;">&#xe633;</i>广州拜博口腔医院地址：</div>
+                    <div class="meal-ac-hospital_on">
+                        <div>1、广州拜博口腔医院惠尔分院</div>
+                        <div>广州市海珠区新港东路2-4号</div>
+                    </div>
+                </div>
+            </div>
             <div class="kong"></div>
         </div>
 	</div>
