--- a/app/partials/dental/dental_meal_c.html
+++ b/app/partials/dental/dental_meal_c.html
@@ -5,8 +5,8 @@
     <!--  第一页-->
 	<img src="/img/child_dental/index_banner.png">
 	<div class="child-dental-container_introl">
-		<div class="child-dental-container_introl--company">诺贝泰康少儿齿科保障计划</div>
-		<div class="orange child-dental-container_introl--price">318元/年起</div>
+		<div class="child-dental-container_introl--company">瑞泰/普尔-虫牙治疗套餐</div>
+		<div class="orange child-dental-container_introl--price">1138元/年</div>
 	</div>
     <div class="child-dental-container_word">让宝宝享受专业的口腔检查、虫牙预防、龋齿治疗、咬合畸形检查，无需体检，无等待期，当日购买即可预约就诊。</div>
     <div class="kong"></div>
@@ -85,12 +85,12 @@
                     <div class="docter_detail">
                         <div class="docter_pic"><img src="/img/child_dental/docter/docter_6.png"></div>
                         <div class="docter_name">张程程</div>
-                        <div class="docter_detail-word">瑞泰口腔望京分院</div>
+                        <div class="docter_detail-word">瑞泰口腔总院</div>
                         <div>儿童口腔专科医师</div>
                     </div>
                     <div class="docter_detail docter_detail--last">
                         <div class="docter_pic"><img src="/img/child_dental/docter/docter_5.png"></div>
-                        <div class="docter_name">陈育松医生</div>
+                        <div class="docter_name">张蕊</div>
                         <div class="docter_detail-word">瑞泰口腔双井分院</div>
                         <div>儿童口腔专科医师</div>
                     </div>
@@ -100,6 +100,35 @@
             <!-- 合作医院环境 -->
             <img src="/img/child_dental/huanjing/huanjing_1.png">
             <img src="/img/child_dental/huanjing/huanjing_2.png">
+            <div class="kong"></div>
+            <div class="hospital-address-controller">
+                <div class="hospital-address-tit"><i class="iconfont" style="color: #4285f4;margin-right: 7px;font-size: 15px;">&#xe633;</i>北京瑞泰口腔医院地址</div>
+                <div class="meal-ac-hospital_on">
+                    <div>1、瑞泰口腔医院总院</div>
+                    <div>北京市朝阳区北苑路媒体村天居园一号楼</div>
+                    <div>2、瑞泰口腔医院亦庄分院</div>
+                    <div>北京亦庄经济技术开发区文化园东路沃尔玛广场山姆会员商店入口旁</div>
+                    <div>3、瑞泰口腔医院上地分院</div>
+                    <div>北京市海淀区上地十街辉煌国际1号院6号楼2层206</div>
+                    <div>4、瑞泰口腔医院望京分院(待开业)</div>
+                    <div>北京市朝阳区广顺北大街望京六佰本北区三层B03</div>
+                    <div>5、瑞泰口腔医院双井分院</div>
+                    <div class="hospital-address">北京市朝阳区广渠路金茂街7号楼一层7-7</div>
+                    <div>6、瑞泰口腔医院海淀万柳分院</div>
+                    <div class="hospital-address">北京市海淀区万柳中路15号303</div>
+                    <div>7、瑞泰口腔医院亦庄经开分院</div>
+                    <div class="hospital-address">北京经济技术开发区地盛北街1号院40号楼</div>
+                </div>
+                <div class="meal-ac-hospital_tw">
+                    <div class="hospital-address-tit"><i class="iconfont" style="color: #4285f4;margin-right: 7px;font-size: 15px;">&#xe633;</i>普尔口腔诊所地址：</div>
+                    <div class="meal-ac-hospital_on">
+                        <div>1、普尔口腔北京</div>
+                        <div>北京市朝阳区建国路88号SOHO现代城A座0324室</div>
+                        <div>2、普尔口腔上海</div>
+                        <div>上海市黄浦区淮海中路381号中环广场1305室</div>
+                    </div>
+                </div>
+            </div>
             <div class="kong"></div>
         </div>
 	</div>
