--- a/app/sass/recognizee_first.scss
+++ b/app/sass/recognizee_first.scss
@@ -40,8 +40,8 @@ body {
 		padding: 0 15px;
 		line-height: .58rem;
 		border-bottom: 1px solid #e2e2e2;
-		font-size: 15px;
-		color: #555;
+		font-size: 17px;
+		color: #444;
 		background: #fff;
 	}
 	.main {
@@ -53,16 +53,29 @@ body {
 		.cell {
 			padding: 0 0 10px 75px;
 		}
+		.del {
+			line-height: normal;
+			input {
+				height: 10px;
+			}
+			padding: .18rem 0;
+		}
 		.line-box {
 			@include flexbox;
 			line-height: .58rem;
 			// border-bottom: 1px solid #e2e2e2;
 			.lable {
 				padding-left: 5px; 
-				width: 70px;
-				color: #999;
-				font-size: 13px;
+				width: 98px;
+				color: #444;
+				font-size: 15px;
 			}
+
+			.between {
+				line-height: normal;
+				// padding-top: .06rem; 
+				
+			} 
 			input {
 				@include flex(1);
 				border:none;
