修正医生详情

--- a/app/partials/dental/select_hospital.html
+++ b/app/partials/dental/select_hospital.html
@@ -54,7 +54,7 @@
 					<img src="<?=$doctor['pic']?>">
 					<div class="doctor_pic_name-word">
 						<div class="doctor_pic_name"><?=$doctor['name']?></div>
-						<div class="doctor_pic_detail"><?=$doctor['specialty']?></div>
+						<div class="doctor_pic_detail"><?=$doctor['description']?></div>
 					</div>
 				</div>
 				<?php endforeach; ?>
