--- a/app/partials/dental/select_doctor.html
+++ b/app/partials/dental/select_doctor.html
@@ -34,11 +34,23 @@
 		<div class="doctor-detail-main_doctor">
 			<img src="<?=$headimg?>">
 			<div class="doctor-detail-main_doctor_name"><?=$doctor_name?></div>
-			<div class="doctor-detail-main_doctor_detail"><span><?=$hospital_name?></span><!--<span>{BRANCH}</span>--></div>
+			<div class="doctor-detail-main_doctor_detail"><span><?=$hospital_name?></span><span><?=$description?></span></div>
 		</div>
 		<div class="doctor-detail-main_doctor_intro">
 			<div class="doctor-detail-main_doctor_intro_detail">
-				<div class="doctor-detail-main_doctor_intro_detail_tit"><span></span>经历</div>
+				<div class="doctor-detail-main_doctor_intro_detail_tit"><span></span>学历资质</div>
+				<div class="doctor-detail-main_doctor_intro_detail_word"><?=$education?></div>
+			</div>
+		</div>
+		<div class="doctor-detail-main_doctor_intro">
+			<div class="doctor-detail-main_doctor_intro_detail">
+				<div class="doctor-detail-main_doctor_intro_detail_tit"><span></span>工作经验</div>
+				<div class="doctor-detail-main_doctor_intro_detail_word"><?=$experience?></div>
+			</div>
+		</div>
+		<div class="doctor-detail-main_doctor_intro">
+			<div class="doctor-detail-main_doctor_intro_detail">
+				<div class="doctor-detail-main_doctor_intro_detail_tit"><span></span>擅长病症</div>
 				<div class="doctor-detail-main_doctor_intro_detail_word"><?=$specialty?></div>
 			</div>
 		</div>
