simple auto commit

--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -160,7 +160,7 @@
             <div class="toast-main_word">北京亦庄经济技术开发区文化园东路沃尔玛广场山姆会员商店入口旁</div>
             <div class="toast-main_tit">3、瑞泰口腔医院上地分院</div>
             <div class="toast-main_word">北京市海淀区上地十街辉煌国际1号院6号楼2层206</div>
-            <div class="toast-main_tit">4、瑞泰口腔医院望京分院</div>
+            <div class="toast-main_tit">4、瑞泰口腔医院望京分院(待开业)</div>
             <div class="toast-main_word">北京市朝阳区广顺北大街望京六佰本北区三层B03</div>
             <div class="toast-main_tit">5、瑞泰口腔医院双井分院</div>
             <div class="toast-main_word">北京市朝阳区广渠路金茂街7号楼一层7-7地铁大郊亭站A口</div>
