齿科预约 in 样式优化

--- a/app/partials/dental/reservation_detail.html
+++ b/app/partials/dental/reservation_detail.html
@@ -50,7 +50,7 @@
 		</ul>
 	</div>
 	<div class="reservation-footer">
-		<div class="ybwx-btn ybwx-btn--primary">复诊</div>
+		<div class="ybwx-btn ybwx-btn--primary" ng-click="goReservation_list()">返回</div>
 	</div>
 </div>
 
