--- a/app/partials/dental/select_doctor.html
+++ b/app/partials/dental/select_doctor.html
@@ -15,9 +15,9 @@
 		</div>
 		<div class="dental-doctor_header_list">
 			<div class="dental-doctor_header_list_steps">
-				<div class="padd_18 flex1 color_ccc"></div>
-				<img src="/img/child_dental/er.jpg">
-				<div class="padd_18 flex1 color_ccc"></div>
+				<div class="padd_18 flex1"></div>
+				<img src="/img/child_dental/blue_er.jpg">
+				<div class="padd_18 flex1"></div>
 			</div>
 			<div class="dental-doctor_header_list-word">电话确认</div>
 		</div>
