--- a/app/partials/dental/confirm.html
+++ b/app/partials/dental/confirm.html
@@ -9,7 +9,7 @@
 				<img src="/img/child_dental/yi.jpg">
 				<div class="padd_18 flex1"></div>
 			</div>
-			<div class="dental-doctor_header_list-word">选择诊所</div>
+			<div class="dental-doctor_header_list-word">选择医院</div>
 		</div>
 		<div class="dental-doctor_header_list">
 			<div class="dental-doctor_header_list_steps">
@@ -17,7 +17,7 @@
 				<img src="/img/child_dental/blue_er.jpg">
 				<div class="padd_18 flex1"></div>
 			</div>
-			<div class="dental-doctor_header_list-word">电话确认</div>
+			<div class="dental-doctor_header_list-word">选择医生</div>
 		</div>
 		<div class="dental-doctor_header_list">
 			<div class="dental-doctor_header_list_steps">
@@ -25,14 +25,14 @@
 				<img src="/img/child_dental/san.jpg">
 				<div class="flex1"></div>
 			</div>
-			<div class="dental-doctor_header_list-word">按时就诊</div>
+			<div class="dental-doctor_header_list-word">电话确认</div>
 		</div>
 	</div>
 	<div class="dental-confirm_main">
-		<div class="dental-confirm_main-tit"><img src="/img/child_dental/gou.jpg">预约成功</div>
+		<div class="dental-confirm_main-tit"><img src="/img/child_dental/gou.jpg">预约提交成功</div>
 		<div class="hint">恭喜您，您的预约申请已提交</div>
 		<div class="hint-word">
-			<span></span>客服人员会尽快回电，确认就诊事宜。
+			<span></span>客服人员会尽快回电，确认就诊时间。
 		</div>
 		<div class="hint-word">
 			<span></span>预约成功后，请携带投保人和被保人的有效身份证件就诊。
