--- a/app/partials/dental/reservation_list.html
+++ b/app/partials/dental/reservation_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/dental/teeth_reservation_list.css?rev=421b4f8e794c1f31ecf792c2d272de00">
+<link rel="stylesheet" href="/css/dental_reservation_list.css?rev=sdfdsfsdfdsf">
 
 
 <div class="teeth_reservation_container" data-ng-init="init()"  cg-busy="secondPromise">
@@ -7,8 +7,12 @@
 <?php foreach ($reservations as $res): ?>
 
 		<li>
-			<div class="teeth-title-container" ng-click="goReservationDetail()" data-appointment="<?=$res['id']?>"><?=$res['package_name']?>
+			<div class="box-container">
+				<div class="teeth-title-container" ng-click="goReservationDetail()" data-appointment="<?=$res['id']?>"><?=$res['package_name']?>
 				<div class="teeth-tip"></div>
+				
+				</div>
+
 				<?php if ($res['can_reserve']): ?>
 				<div class="teech-btn-wrapper">
 				<div class="ybwx-btn ybwx-btn--primary" ng-click="goDentalDoctor()" data-id="<?=$res['id']?>">预约</div>
@@ -16,14 +20,16 @@
 				<?php else: ?>
 				<div class="teeth-status"><?=$res['status_text']?></div>
 				<?php endif; ?>
+
 			</div>
+			
 			<div class="teeth-content">
 
 				<div class="teeth-content_des">就诊客户: <?=$res['insurant_name']?></div>
 				<div class="teeth-content_title">包含项目：</div>
 				<div class="teeth-content_items">
 					<?php foreach ($res['items'] as $item): ?>
-					<div class="teeth-content_item<?php if ($item['status']=='disabled') echo 'teeth-content_item--gray'; ?>">
+					<div class="teeth-content_item <?php if ($item['status']=='disabled') echo 'teeth-content_item--gray'; ?>">
 						<?php if ($item['finished']): ?>
 						<i class="iconfont teeth-content_item_ok " >&#xe634;</i>
 						<?php else: ?>
