--- a/app/sass/pay_success.scss
+++ b/app/sass/pay_success.scss
@@ -18,8 +18,8 @@
 	.hint {
 		box-sizing: border-box;
 		padding: 5px 18px;
-		height: 50px;
-		font-size: 13px;
+		// height: 50px;
+		font-size: .16rem;
 		color: #fff;
 		background: url(../img/win_hint/back_big.png) no-repeat;
 		background-size: 100% 100%;
